# rust_getting_started

./: .gitignore
session_10/access_10-2/: Cargo.toml
session_10/ownership_10-1/: Cargo.toml
session_11/dice_11-2/: Cargo.toml
session_11/random_11-1/: Cargo.toml
session_12/open_read_12-2/: Cargo.toml  sample.txt
session_12/read_all_12-1/: Cargo.toml  sample.txt
session_12/read_byte_12-3/: Cargo.toml
session_12/read_file_12-6/: Cargo.toml  sample.txt
session_12/read_line_12-4/: Cargo.toml
session_12/read_stdin_12-7/: Cargo.toml
session_12/stdout_12-8/: Cargo.toml
session_12/write_12-5/: Cargo.toml
session_14/http_14-1/: Cargo.toml
session_15/diesel_15-1/: Cargo.toml  diesel.toml  memo.md
session_15/diesel_15-1/src/: main.rs  models.rs
session_17/closure_17-1/: Cargo.toml
session_17/closure_17-2/: Cargo.toml
session_17/closure_17-3/: Cargo.toml
session_19/hellotest_19-1/: Cargo.toml
session_3/bind_3-5/: Cargo.toml
session_3/bind_scope/: Cargo.toml
session_3/compare/: Cargo.toml
session_3/ownership/: Cargo.toml
session_3/ownership_3-3/: Cargo.toml
session_3/ownership_3-4/: Cargo.toml
session_3/scope_3-6/: Cargo.toml
session_3/type_3-1/: Cargo.toml
session_3/type_3-2/: Cargo.toml
session_4/char_4-1/: Cargo.toml
session_4/jap_4-3/: Cargo.toml
session_4/keigo/: Cargo.toml
session_4/slice_4-4/: Cargo.toml
session_4/str_4-2/: Cargo.toml
session_5/bit_5-1/: Cargo.toml
session_5/count/: Cargo.toml
session_5/string-func_5-2/: Cargo.toml
session_5/vector-func_5-3/: Cargo.toml
session_6/for_6-2/: Cargo.toml
(+84 files in other folders)
