[package]
name = "diesel_15-1"
version = "0.1.0"
authors = ["masaya.tahara <mocoso.0u1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
